CGAL 3.6.1 is a bug-fixes release. The following has been changed
since CGAL-3.6:

1. General

  - Fix compilation errors with recent Boost versions (since 1.40).

  - Initial support for the Microsoft Visual C++ compiler 10.0 (MSVC
    2010). For that support, CMake>=2.8.2 is required. At the time
    CGAL-3.6.1 was released, CMake-2.8.2 was not yet released, but
    CMake-2.8.2rc2 was published by Kitware at
    http://www.cmake.org/files/v2.8/
    Note also that the compiler option "/bigobj" is necessary to compile
    some CGAL programs with MSVC 2010.


2. Polynomial

  - Fix compilation errors with the Microsoft Visual C++ compiler and the
    Intel C++ compiler.


3. Polyhedron

  - Fix a compilation errors in demo/Polyhedron/:
     - issue with the location of qglobal.h of Qt4 on MacOS X,
     - missing texture.cpp, if TAUCS is used,
  - Fix the location of built plugins of demo/Polyhedron/, when CGAL is
    configured with WITH_demos=ON


4. 3D Periodic Triangulations

  - Fixed bug in the triangulation hierarchy for periodic triangulations.


5. 2D Mesh Generation

  - Fix a bug that lead to precondition violation.
  - Improve the user manual about the member function is_in_domain() of the
    Face type.
  - The 2D meshing process is now deterministic (sorting of bad faces no
    longer relies on pointers comparisons).


6. 3D Mesh Generation

  - Fix a linking errors (duplicate symbols) when <CGAL/refine_mesh_3.h> is
    included in different compilation units.


7. Spatial Searching

  - Fix a bug in <CGAL/Orthogonal_k_neighbor_search.h> when several
    nearest neighbors are at the same distance from the query point.

8. IO Streams

  - Fix a bug in <CGAL/IO/VRML_2_ostream.h> that generated VRML 2 files with
    an invalid syntax for IndexedFaceSet nodes.

----------------------------- Release 3.6 ----------------------------------

CGAL 3.6 offers the following improvements and new functionality : 

1 General
