@@ -40,7 +40,7 @@ if ( NOT CGAL_GMP_SETUP )
       if ( MSVC AND NOT CGAL_AUTO_LINK_MPFR )
         add_to_cached_list(CGAL_3RD_PARTY_DEFINITIONS    -DCGAL_NO_AUTOLINK_MPFR   )
       endif()
-      if ( MSVC AND NOT CGAL_NO_AUTO_LINK_GMP )
+      if ( MSVC AND NOT CGAL_AUTO_LINK_GMP )
         add_to_cached_list(CGAL_3RD_PARTY_DEFINITIONS    -DCGAL_NO_AUTOLINK_GMP   )
       endif()
     else( MPFR_FOUND )
