@@ -56,7 +56,7 @@ since CGAL-3.6:
   - Initial support for the Microsoft Visual C++ compiler 10.0 (MSVC
     2010). For that support, CMake>=2.8.2 is required. At the time
     CGAL-3.6.1 was released, CMake-2.8.2 was not yet released, but
-    CMake-2.8.2rc2 was published by Kitware at
+    CMake-2.8.2rc3 was published by Kitware at
     http://www.cmake.org/files/v2.8/
     Note also that the compiler option "/bigobj" is necessary to compile
     some CGAL programs with MSVC 2010.
@@ -106,7 +106,13 @@ since CGAL-3.6:
 
   - Fix a bug in <CGAL/IO/VRML_2_ostream.h> that generated VRML 2 files with
     an invalid syntax for IndexedFaceSet nodes.
-
+    
+9. Triangulation_2
+  - Add missing Compare_distance_2 functor in trait classes Triangulation_euclidean_traits_xy_3
+    Triangulation_euclidean_traits_yz_3 and Triangulation_euclidean_traits_xz_3.
+    This was preventing calling member function nearest_vertex of Delaunay_triangulation_2
+    instantiated with one of these traits.
+    
 ----------------------------- Release 3.6 ----------------------------------
 
 CGAL 3.6 offers the following improvements and new functionality : 
